--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".OpenedActivity"></activity>
+        <activity android:name=".Menu1Fragment"></activity>
+        <activity android:name=".Menu2Fragment" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".OpenedActivity" />
         <activity android:name=".RemittanceActivity" />
         <activity android:name=".AllSetActivity" />
         <activity android:name=".TimeLineActivity" />
         <activity android:name=".LookUpActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Main3Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
