--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.myapplication2">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
@@ -12,17 +14,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".SendingActivity"></activity>
+        <activity android:name=".DutchPayActivity"></activity>
+        <activity android:name=".CameraActivity" />
+        <activity android:name=".SendingActivity" />
         <activity android:name=".NoticeActivity" />
         <activity android:name=".Menu1Fragment" />
         <activity android:name=".Menu2Fragment" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.SPLASH" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".OpenedActivity" />
         <activity android:name=".RemittanceActivity" />
         <activity android:name=".AllSetActivity" />
