--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
+        android:name=".Appication"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -32,6 +33,7 @@
         <activity android:name=".RemittanceActivity" />
         <activity android:name=".AllSetActivity" />
         <activity android:name=".TimeLineActivity" />
+        <activity android:name=".TimeLineActivity2"/>
         <activity android:name=".LookUpActivity" />
         <activity android:name=".Main3Activity" />
     </application>
