--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
 }
