--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -39,7 +40,6 @@
         <activity android:name=".OpenedActivity" />
         <activity android:name=".RemittanceActivity" />
         <activity android:name=".AllSetActivity" />
-        <activity android:name=".TimeLineActivity" />
         <activity android:name=".TimeLineActivity2"/>
         <activity android:name=".LookUpActivity" />
         <activity android:name=".Main3Activity" />
@@ -47,6 +47,20 @@
         <activity android:name=".MyProfileActivity"/>
         <activity android:name=".MyProfileImgDialog"
             android:theme="@style/ThemeDialog"/>
+        <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/toss"/>
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent"/>
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/default_notification_channel_id"/>
+        <service android:name=".MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
